@@ -111,12 +111,10 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
-            <version>5.2.6.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>5.2.6.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
@@ -149,12 +147,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
-            <version>2.3.0.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-test</artifactId>
-            <version>2.3.0.RELEASE</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -169,7 +165,6 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>5.2.6.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.webflow</groupId>
@@ -250,17 +245,46 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-taglibs</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-annotations-api</artifactId>
+            <version>9.0.35</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.webflow</groupId>
+            <artifactId>spring-webflow</artifactId>
+            <version>2.5.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.10</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>2.3.0.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>2.2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
+            <version>1.3.5</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -273,6 +297,7 @@
                     <junitArtifactName>junit:junit</junitArtifactName>
                     <includes>
                         <include>**/*Test.java</include>
+                        <include>**/*test.java</include>
                     </includes>
                 </configuration>
             </plugin>
@@ -335,7 +360,7 @@
                             <url>${project.url}</url>
                             <Build-Jdk>${java.version} (${java.vendor} ${java.vm.version}</Build-Jdk>
                             <Build-Timestamp>${maven.build.timestamp}</Build-Timestamp>
-                            <Build-Revision>${git.commit.id}</Build-Revision>
+                            <Build-Revision>${git.commit.id.describe-short}</Build-Revision>
                             <Build-OS>${os.name} ${os.arch} ${os.version}</Build-OS>
                         </manifestEntries>
                     </archive>
@@ -349,6 +374,11 @@
                 <configuration>
                     <source>14</source>
                     <target>14</target>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
+                    <parameters>true</parameters>
                 </configuration>
             </plugin>
         </plugins>
